# rofi-bluetooth

./: .gitignore  CMakeLists.txt
include/: bluetooth_internal.h  constants.h  types.h
src/: bluetooth.c
